delete bookings
